CR-2008-12-01-0: Bugfix:     Fixed TCL error in testsuite framework procedure
                             "execute_test_preparation_procedure()"

TB-2008-11-28-1: Bugfix:     o fixed Hedeby test slo/maxPendingJobs/withJobFilter,
                               architecture from host-config can be different
                               from arch of util/arch
                 Review:     RH

EB-2008-11-28-0: Bugfix:     - fixed bug which were caused by changes of perl
										 script in maintrunc.
									  - Added handling of ps output for free bsb
									    architecture in TS
									  - Fixed bug which made TS unusable if it was used
									    in environments with ssh login on hosts without
										 password
									  - added additional TS scenarios to jsv_script and
									  	 jsv_ge tests
				     Review:     CR

TB-2008-11-28-0: Cleanup:    o cleanup of Hedeby test slo/min_resource
                 Review:     MG

LP-2008-11-27-1: Bugfix:     Fixed else if syntax problem
                 Review:     EB

LP-2008-11-27-0: Enhancem.:  -no-jmx is used when JMX_PORT == 0
                 Review:     MD, AP

CR-2008-11-27-0: Bugfix:     - fixed broken file_parsing test
                 Belongs to: CR-2008-11-25-0

CR-2008-11-26-0: Bugfix:     - Fixed checktree/upgrade_test/check.exp so that
                               it fails when bdb spool dir is not onwed by
                               admin user.
                             - Cleanup function now fixes wrong user owner
                               of dbd spool dir if it is not admin user after
                               running this test.
                             - added new tcl file procedures:
                               get_dir_gid() and get_dir_uid()
                 Review:     DG

CR-2008-11-25-0: Cleanup:    - Use get_binary_path() for start_remote_prog()
                               calls where it is possible.