@@ -57,7 +57,7 @@ set check_needs           "init_core_system"
 
 # define test's procedure order
 set check_functions {}
-lappend check_functions "check_user_permissions"
+lappend check_functions   "check_user_permissions"
 
 proc check_user_permissions_init_level {} {
    global CHECK_ACT_LEVEL
@@ -77,7 +77,7 @@ proc check_user_permissions {} {
    global ts_config
 
   set time [timestamp]
-  if { $CHECK_ADMIN_USER_SYSTEM == 0 } { 
+  if {$CHECK_ADMIN_USER_SYSTEM == 0} { 
      set user_list "root $CHECK_USER $CHECK_FIRST_FOREIGN_SYSTEM_USER $CHECK_SECOND_FOREIGN_SYSTEM_USER"
   } else {
      set user_list "$CHECK_USER"
@@ -89,11 +89,11 @@ proc check_user_permissions {} {
         set execd_spooldir [get_execd_spool_dir $host]
         ts_log_fine "checking execd spool directory on $host (user=$user): \"$execd_spooldir\""
         set output [start_remote_prog "$host" "$user" "cd" "$execd_spooldir"]
-        if { $prg_exit_state != 0 } {
+        if {$prg_exit_state != 0} {
            ts_log_severe "user $user has no read//exec permission to \"$execd_spooldir\" on host $host: $output"
         }
-        set output [ start_remote_prog "$host" "$user" "cd" "$ts_config(testsuite_root_dir)/scripts" ]
-        if { $prg_exit_state != 0 } {
+        set output [start_remote_prog "$host" "$user" "cd" "$ts_config(testsuite_root_dir)/scripts"]
+        if {$prg_exit_state != 0} {
            ts_log_severe "user $user has no read//exec permission to \"$ts_config(testsuite_root_dir)/scripts\" on host $host: $output"
         }
 
@@ -102,7 +102,7 @@ proc check_user_permissions {} {
         set output [start_remote_prog $host $user "pwd" "" prg_exit_state 60 0 $execd_spooldir]
         set output [string trim $output]
 
-        if { [string match "*$execd_spooldir*" "$output"] == 0 } {
+        if {[string match "*$execd_spooldir*" "$output"] == 0} {
            ts_log_fine "pwd in execd spool directory on $host (user=$user): \"$execd_spooldir\": \"[string trim $output]\")"
            ts_log_severe "pwd (csh) in \"$execd_spooldir\" on host $host returned: $output, not $execd_spooldir"
         }
@@ -113,21 +113,21 @@ proc check_user_permissions {} {
   ts_log_fine "master spool directory on host $ts_config(master_host): \"$master_spooldir\""
   foreach user $user_list {
       ts_log_fine "checking master spool directory for user: \"$user\""
-      set output [ start_remote_prog "$ts_config(master_host)" "$user" "cd" "$master_spooldir"  ]
-      if { $prg_exit_state != 0 } {
+      set output [start_remote_prog "$ts_config(master_host)" "$user" "cd" "$master_spooldir" prg_exit_state]
+      if {$prg_exit_state != 0} {
          ts_log_fine "--> E R R O R - user $user has no read//exec permission to $master_spooldir on host $ts_config(master_host)"
          ts_log_severe "user $user has no read//exec permission to $master_spooldir on host $ts_config(master_host)"
       }
 
       # additional check the directory pwd output
-      set output [start_remote_prog $ts_config(master_host) $user "pwd" "" prg_exit_state 60 0 $execd_spooldir]
+      set output [start_remote_prog $ts_config(master_host) $user "pwd" "" prg_exit_state 60 0 $master_spooldir]
       set output [string trim $output]
 
-      if { [string match "*$master_spooldir*" $output] == 0 } {
-         ts_log_fine "pwd in master spool directory on $host (user=$user): \"$master_spooldir\": \"[string trim $output]\")"
-         ts_log_severe "pwd (csh) in \"$master_spooldir\" on host $host returned: $output, not $master_spooldir"
+      if {[string match "*$master_spooldir*" $output] == 0} {
+         ts_log_fine "pwd in master spool directory on $ts_config(master_host) (user=$user): \"$master_spooldir\": \"[string trim $output]\")"
+         ts_log_severe "pwd (csh) in \"$master_spooldir\" on host $ts_config(master_host) returned: $output, not $master_spooldir"
       }
   }
-  ts_log_fine "runtime: [ expr ( [timestamp] - $time ) ]"
+  ts_log_fine "runtime: [expr ([timestamp] - $time)]"
   get_version_info
 }
