@@ -1,3 +1,7 @@
+HP-2008-12-02-0: Bugfix:     Fixed error in "pwd" check in user_permissions test
+                 Issue:      268
+                 Review:     MD   
+
 CR-2008-12-01-0: Bugfix:     Fixed TCL error in testsuite framework procedure
                              "execute_test_preparation_procedure()"
 
